@@ -18,8 +18,8 @@ COMPILER_FLAGS="${MODE} -std=c++14 -O2"
 LINKER_FLAGS=""
 
 # Give execution permission
-chmod +x ${ROOT_PATH}/tools/buildAndRun.sh;
+chmod +x ${ROOT_PATH}/tools/buildScripts/buildAndRun.sh;
 # Compile everything
-${ROOT_PATH}/tools/build.sh "${PROJECT_FOLDER}" "${TARGET_FILE}" "${ROOT_PATH}" "${TEMP_DIR}" "${WINDOW_MANAGER}" "${COMPILER_FLAGS}" "${LINKER_FLAGS}";
+${ROOT_PATH}/tools/buildScripts/build.sh "${PROJECT_FOLDER}" "${TARGET_FILE}" "${ROOT_PATH}" "${TEMP_DIR}" "${WINDOW_MANAGER}" "${COMPILER_FLAGS}" "${LINKER_FLAGS}";
 # Run the application
 ${TARGET_FILE} ./পরীক্ষা;
